<resources>
    <string name="app_name">Option</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_stock">Stock</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="header_code">代码</string>
    <string name="header_sell">止损位</string>
    <string name="header_buy">买入范围</string>
    <string name="header_bomb_point">突破点</string>
    <string name="header_stress">目标位</string>
    <string name="header_direction">方向</string>
    <string name="header_star">标星</string>

</resources>