<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/header_code"
            android:gravity="center"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.125"/>

        <TextView
            android:id="@+id/tv_sell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/header_sell"
            android:gravity="center"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/tv_code"
            app:layout_constraintWidth_percent="0.125"/>

        <TextView
            android:id="@+id/tv_buy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/header_buy"
            android:gravity="center"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/tv_sell"
            app:layout_constraintWidth_percent="0.25" />

        <TextView
            android:id="@+id/tv_bomb_point"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/header_bomb_point"
            android:gravity="center"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/tv_buy"
            app:layout_constraintWidth_percent="0.125" />

        <TextView
            android:id="@+id/tv_stress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/header_stress"
            android:gravity="center"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/tv_bomb_point"
            app:layout_constraintWidth_percent="0.125" />

        <TextView
            android:id="@+id/tv_direction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/header_direction"
            android:gravity="center"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/tv_stress"
            app:layout_constraintWidth_percent="0.125" />

        <TextView
            android:id="@+id/tv_star"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/header_star"
            android:gravity="center"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/tv_direction"
            app:layout_constraintWidth_percent="0.125" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/header_container"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>